parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> const_section var_section subroutine_section
Rule 2     const_section -> const_section const_declaration
Rule 3     const_section -> empty
Rule 4     const_declaration -> CONST type ID ASSIGN expression SEMICOLON
Rule 5     var_section -> var_section var_declaration
Rule 6     var_section -> empty
Rule 7     var_declaration -> type ID ASSIGN expression SEMICOLON
Rule 8     var_declaration -> type ID SEMICOLON
Rule 9     subroutine_section -> subroutine_section subroutine_decl
Rule 10    subroutine_section -> empty
Rule 11    subroutine_decl -> SUBROUTINE subroutine_type ID LPAREN param_list RPAREN DO statement_list END
Rule 12    subroutine_type -> VOID
Rule 13    subroutine_type -> INT
Rule 14    subroutine_type -> BOOL
Rule 15    subroutine_type -> STRING
Rule 16    param_list -> param_list COMMA param_decl
Rule 17    param_list -> param_decl
Rule 18    param_list -> empty
Rule 19    param_decl -> type ID
Rule 20    statement_list -> statement_list statement
Rule 21    statement_list -> empty
Rule 22    statement -> assignment_stmt
Rule 23    statement -> if_stmt
Rule 24    statement -> while_stmt
Rule 25    statement -> return_stmt
Rule 26    statement -> print_stmt
Rule 27    statement -> call_stmt SEMICOLON
Rule 28    assignment_stmt -> ID ASSIGN expression SEMICOLON
Rule 29    if_stmt -> IF LPAREN expression RPAREN THEN statement_list else_part END
Rule 30    else_part -> ELSE statement_list
Rule 31    else_part -> empty
Rule 32    while_stmt -> WHILE LPAREN expression RPAREN DO statement_list END
Rule 33    return_stmt -> RETURN expression SEMICOLON
Rule 34    print_stmt -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 35    call_stmt -> ID LPAREN arg_list RPAREN
Rule 36    arg_list -> arg_list COMMA expression
Rule 37    arg_list -> expression
Rule 38    arg_list -> empty
Rule 39    expression -> ID LPAREN arg_list RPAREN
Rule 40    expression -> expression PLUS expression
Rule 41    expression -> expression MINUS expression
Rule 42    expression -> expression TIMES expression
Rule 43    expression -> expression DIVIDE expression
Rule 44    expression -> expression EQ expression
Rule 45    expression -> expression NEQ expression
Rule 46    expression -> expression GT expression
Rule 47    expression -> expression LT expression
Rule 48    expression -> expression AND expression
Rule 49    expression -> expression OR expression
Rule 50    expression -> NOT expression
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> INT_LITERAL
Rule 53    expression -> STRING_LITERAL
Rule 54    expression -> TRUE
Rule 55    expression -> FALSE
Rule 56    expression -> ID
Rule 57    type -> VOID
Rule 58    type -> INT
Rule 59    type -> BOOL
Rule 60    type -> STRING
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
ASSIGN               : 4 7 28
BOOL                 : 14 59
COMMA                : 16 36
CONST                : 4
DIVIDE               : 43
DO                   : 11 32
ELSE                 : 30
END                  : 11 29 32
EQ                   : 44
FALSE                : 55
GT                   : 46
ID                   : 4 7 8 11 19 28 35 39 56
IF                   : 29
INT                  : 13 58
INT_LITERAL          : 52
LPAREN               : 11 29 32 34 35 39 51
LT                   : 47
MINUS                : 41
NEQ                  : 45
NOT                  : 50
OR                   : 49
PLUS                 : 40
PRINT                : 34
RETURN               : 33
RPAREN               : 11 29 32 34 35 39 51
SEMICOLON            : 4 7 8 27 28 33 34
STRING               : 15 60
STRING_LITERAL       : 53
SUBROUTINE           : 11
THEN                 : 29
TIMES                : 42
TRUE                 : 54
VOID                 : 12 57
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

arg_list             : 35 36 39
assignment_stmt      : 22
call_stmt            : 27
const_declaration    : 2
const_section        : 1 2
else_part            : 29
empty                : 3 6 10 18 21 31 38
expression           : 4 7 28 29 32 33 34 36 37 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51
if_stmt              : 23
param_decl           : 16 17
param_list           : 11 16
print_stmt           : 26
program              : 0
return_stmt          : 25
statement            : 20
statement_list       : 11 20 29 30 32
subroutine_decl      : 9
subroutine_section   : 1 9
subroutine_type      : 11
type                 : 4 7 8 19
var_declaration      : 5
var_section          : 1 5
while_stmt           : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . const_section var_section subroutine_section
    (2) const_section -> . const_section const_declaration
    (3) const_section -> . empty
    (61) empty -> .

    CONST           reduce using rule 61 (empty -> .)
    VOID            reduce using rule 61 (empty -> .)
    INT             reduce using rule 61 (empty -> .)
    BOOL            reduce using rule 61 (empty -> .)
    STRING          reduce using rule 61 (empty -> .)
    SUBROUTINE      reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)

    program                        shift and go to state 1
    const_section                  shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> const_section . var_section subroutine_section
    (2) const_section -> const_section . const_declaration
    (5) var_section -> . var_section var_declaration
    (6) var_section -> . empty
    (4) const_declaration -> . CONST type ID ASSIGN expression SEMICOLON
    (61) empty -> .

    CONST           shift and go to state 7
    VOID            reduce using rule 61 (empty -> .)
    INT             reduce using rule 61 (empty -> .)
    BOOL            reduce using rule 61 (empty -> .)
    STRING          reduce using rule 61 (empty -> .)
    SUBROUTINE      reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)

    var_section                    shift and go to state 4
    const_declaration              shift and go to state 5
    empty                          shift and go to state 6

state 3

    (3) const_section -> empty .

    CONST           reduce using rule 3 (const_section -> empty .)
    VOID            reduce using rule 3 (const_section -> empty .)
    INT             reduce using rule 3 (const_section -> empty .)
    BOOL            reduce using rule 3 (const_section -> empty .)
    STRING          reduce using rule 3 (const_section -> empty .)
    SUBROUTINE      reduce using rule 3 (const_section -> empty .)
    $end            reduce using rule 3 (const_section -> empty .)


state 4

    (1) program -> const_section var_section . subroutine_section
    (5) var_section -> var_section . var_declaration
    (9) subroutine_section -> . subroutine_section subroutine_decl
    (10) subroutine_section -> . empty
    (7) var_declaration -> . type ID ASSIGN expression SEMICOLON
    (8) var_declaration -> . type ID SEMICOLON
    (61) empty -> .
    (57) type -> . VOID
    (58) type -> . INT
    (59) type -> . BOOL
    (60) type -> . STRING

    SUBROUTINE      reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    VOID            shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15

    subroutine_section             shift and go to state 8
    var_declaration                shift and go to state 9
    empty                          shift and go to state 10
    type                           shift and go to state 11

state 5

    (2) const_section -> const_section const_declaration .

    CONST           reduce using rule 2 (const_section -> const_section const_declaration .)
    VOID            reduce using rule 2 (const_section -> const_section const_declaration .)
    INT             reduce using rule 2 (const_section -> const_section const_declaration .)
    BOOL            reduce using rule 2 (const_section -> const_section const_declaration .)
    STRING          reduce using rule 2 (const_section -> const_section const_declaration .)
    SUBROUTINE      reduce using rule 2 (const_section -> const_section const_declaration .)
    $end            reduce using rule 2 (const_section -> const_section const_declaration .)


state 6

    (6) var_section -> empty .

    VOID            reduce using rule 6 (var_section -> empty .)
    INT             reduce using rule 6 (var_section -> empty .)
    BOOL            reduce using rule 6 (var_section -> empty .)
    STRING          reduce using rule 6 (var_section -> empty .)
    SUBROUTINE      reduce using rule 6 (var_section -> empty .)
    $end            reduce using rule 6 (var_section -> empty .)


state 7

    (4) const_declaration -> CONST . type ID ASSIGN expression SEMICOLON
    (57) type -> . VOID
    (58) type -> . INT
    (59) type -> . BOOL
    (60) type -> . STRING

    VOID            shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15

    type                           shift and go to state 16

state 8

    (1) program -> const_section var_section subroutine_section .
    (9) subroutine_section -> subroutine_section . subroutine_decl
    (11) subroutine_decl -> . SUBROUTINE subroutine_type ID LPAREN param_list RPAREN DO statement_list END

    $end            reduce using rule 1 (program -> const_section var_section subroutine_section .)
    SUBROUTINE      shift and go to state 18

    subroutine_decl                shift and go to state 17

state 9

    (5) var_section -> var_section var_declaration .

    VOID            reduce using rule 5 (var_section -> var_section var_declaration .)
    INT             reduce using rule 5 (var_section -> var_section var_declaration .)
    BOOL            reduce using rule 5 (var_section -> var_section var_declaration .)
    STRING          reduce using rule 5 (var_section -> var_section var_declaration .)
    SUBROUTINE      reduce using rule 5 (var_section -> var_section var_declaration .)
    $end            reduce using rule 5 (var_section -> var_section var_declaration .)


state 10

    (10) subroutine_section -> empty .

    SUBROUTINE      reduce using rule 10 (subroutine_section -> empty .)
    $end            reduce using rule 10 (subroutine_section -> empty .)


state 11

    (7) var_declaration -> type . ID ASSIGN expression SEMICOLON
    (8) var_declaration -> type . ID SEMICOLON

    ID              shift and go to state 19


state 12

    (57) type -> VOID .

    ID              reduce using rule 57 (type -> VOID .)


state 13

    (58) type -> INT .

    ID              reduce using rule 58 (type -> INT .)


state 14

    (59) type -> BOOL .

    ID              reduce using rule 59 (type -> BOOL .)


state 15

    (60) type -> STRING .

    ID              reduce using rule 60 (type -> STRING .)


state 16

    (4) const_declaration -> CONST type . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 20


state 17

    (9) subroutine_section -> subroutine_section subroutine_decl .

    SUBROUTINE      reduce using rule 9 (subroutine_section -> subroutine_section subroutine_decl .)
    $end            reduce using rule 9 (subroutine_section -> subroutine_section subroutine_decl .)


state 18

    (11) subroutine_decl -> SUBROUTINE . subroutine_type ID LPAREN param_list RPAREN DO statement_list END
    (12) subroutine_type -> . VOID
    (13) subroutine_type -> . INT
    (14) subroutine_type -> . BOOL
    (15) subroutine_type -> . STRING

    VOID            shift and go to state 22
    INT             shift and go to state 23
    BOOL            shift and go to state 24
    STRING          shift and go to state 25

    subroutine_type                shift and go to state 21

state 19

    (7) var_declaration -> type ID . ASSIGN expression SEMICOLON
    (8) var_declaration -> type ID . SEMICOLON

    ASSIGN          shift and go to state 26
    SEMICOLON       shift and go to state 27


state 20

    (4) const_declaration -> CONST type ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 28


state 21

    (11) subroutine_decl -> SUBROUTINE subroutine_type . ID LPAREN param_list RPAREN DO statement_list END

    ID              shift and go to state 29


state 22

    (12) subroutine_type -> VOID .

    ID              reduce using rule 12 (subroutine_type -> VOID .)


state 23

    (13) subroutine_type -> INT .

    ID              reduce using rule 13 (subroutine_type -> INT .)


state 24

    (14) subroutine_type -> BOOL .

    ID              reduce using rule 14 (subroutine_type -> BOOL .)


state 25

    (15) subroutine_type -> STRING .

    ID              reduce using rule 15 (subroutine_type -> STRING .)


state 26

    (7) var_declaration -> type ID ASSIGN . expression SEMICOLON
    (39) expression -> . ID LPAREN arg_list RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . INT_LITERAL
    (53) expression -> . STRING_LITERAL
    (54) expression -> . TRUE
    (55) expression -> . FALSE
    (56) expression -> . ID

    ID              shift and go to state 30
    NOT             shift and go to state 33
    LPAREN          shift and go to state 32
    INT_LITERAL     shift and go to state 34
    STRING_LITERAL  shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    expression                     shift and go to state 31

state 27

    (8) var_declaration -> type ID SEMICOLON .

    VOID            reduce using rule 8 (var_declaration -> type ID SEMICOLON .)
    INT             reduce using rule 8 (var_declaration -> type ID SEMICOLON .)
    BOOL            reduce using rule 8 (var_declaration -> type ID SEMICOLON .)
    STRING          reduce using rule 8 (var_declaration -> type ID SEMICOLON .)
    SUBROUTINE      reduce using rule 8 (var_declaration -> type ID SEMICOLON .)
    $end            reduce using rule 8 (var_declaration -> type ID SEMICOLON .)


state 28

    (4) const_declaration -> CONST type ID ASSIGN . expression SEMICOLON
    (39) expression -> . ID LPAREN arg_list RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . INT_LITERAL
    (53) expression -> . STRING_LITERAL
    (54) expression -> . TRUE
    (55) expression -> . FALSE
    (56) expression -> . ID

    ID              shift and go to state 30
    NOT             shift and go to state 33
    LPAREN          shift and go to state 32
    INT_LITERAL     shift and go to state 34
    STRING_LITERAL  shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    expression                     shift and go to state 38

state 29

    (11) subroutine_decl -> SUBROUTINE subroutine_type ID . LPAREN param_list RPAREN DO statement_list END

    LPAREN          shift and go to state 39


state 30

    (39) expression -> ID . LPAREN arg_list RPAREN
    (56) expression -> ID .

    LPAREN          shift and go to state 40
    SEMICOLON       reduce using rule 56 (expression -> ID .)
    PLUS            reduce using rule 56 (expression -> ID .)
    MINUS           reduce using rule 56 (expression -> ID .)
    TIMES           reduce using rule 56 (expression -> ID .)
    DIVIDE          reduce using rule 56 (expression -> ID .)
    EQ              reduce using rule 56 (expression -> ID .)
    NEQ             reduce using rule 56 (expression -> ID .)
    GT              reduce using rule 56 (expression -> ID .)
    LT              reduce using rule 56 (expression -> ID .)
    AND             reduce using rule 56 (expression -> ID .)
    OR              reduce using rule 56 (expression -> ID .)
    RPAREN          reduce using rule 56 (expression -> ID .)
    COMMA           reduce using rule 56 (expression -> ID .)


state 31

    (7) var_declaration -> type ID ASSIGN expression . SEMICOLON
    (40) expression -> expression . PLUS expression
    (41) expression -> expression . MINUS expression
    (42) expression -> expression . TIMES expression
    (43) expression -> expression . DIVIDE expression
    (44) expression -> expression . EQ expression
    (45) expression -> expression . NEQ expression
    (46) expression -> expression . GT expression
    (47) expression -> expression . LT expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression

    SEMICOLON       shift and go to state 41
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45
    EQ              shift and go to state 46
    NEQ             shift and go to state 47
    GT              shift and go to state 48
    LT              shift and go to state 49
    AND             shift and go to state 50
    OR              shift and go to state 51


state 32

    (51) expression -> LPAREN . expression RPAREN
    (39) expression -> . ID LPAREN arg_list RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . INT_LITERAL
    (53) expression -> . STRING_LITERAL
    (54) expression -> . TRUE
    (55) expression -> . FALSE
    (56) expression -> . ID

    ID              shift and go to state 30
    NOT             shift and go to state 33
    LPAREN          shift and go to state 32
    INT_LITERAL     shift and go to state 34
    STRING_LITERAL  shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    expression                     shift and go to state 52

state 33

    (50) expression -> NOT . expression
    (39) expression -> . ID LPAREN arg_list RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression TIMES expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression EQ expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression GT expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . INT_LITERAL
    (53) expression -> . STRING_LITERAL
    (54) expression -> . TRUE
    (55) expression -> . FALSE
    (56) expression -> . ID

    ID              shift and go to state 30
    NOT             shift and go to state 33
    LPAREN          shift and go to state 32
    INT_LITERAL     shift and go to state 34
    STRING_LITERAL  shift and go to state 35
    TRUE            shift and go to state 36
    FALSE           shift and go to state 37

    expression                     shift and go to state 53

state 34

    (52) expression -> INT_LITERAL .

    SEMICOLON       reduce using rule 52 (expression -> INT_LITERAL .)
    PLUS            reduce using rule 52 (expression -> INT_LITERAL .)
    MINUS           reduce using rule 52 (expression -> INT_LITERAL .)
    TIMES           reduce using rule 52 (expression -> INT_LITERAL .)
    DIVIDE          reduce using rule 52 (expression -> INT_LITERAL .)
    EQ              reduce using rule 52 (expression -> INT_LITERAL .)
    NEQ             reduce using rule 52 (expression -> INT_LITERAL .)
    GT              reduce using rule 52 (expression -> INT_LITERAL .)
    LT              reduce using rule 52 (expression -> INT_LITERAL .)
    AND             reduce using rule 52 (expression -> INT_LITERAL .)
    OR              reduce using rule 52 (expression -> INT_LITERAL .)
    RPAREN          reduce using rule 52 (expression -> INT_LITERAL .)
    COMMA           reduce using rule 52 (expression -> INT_LITERAL .)


state 35

    (53) expression -> STRING_LITERAL .

    SEMICOLON       reduce using rule 53 (expression -> STRING_LITERAL .)
    PLUS            reduce using rule 53 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 53 (expression -> STRING_LITERAL .)
    TIMES           reduce using rule 53 (expression -> STRING_LITERAL .)
    DIVIDE          reduce using rule 53 (expression -> STRING_LITERAL .)
    EQ              reduce using rule 53 (expression -> STRING_LITERAL .)
    NEQ             reduce using rule 53 (expression -> STRING_LITERAL .)
    GT              reduce using rule 53 (expression -> STRING_LITERAL .)
    LT              reduce using rule 53 (expression -> STRING_LITERAL .)
    AND             reduce using rule 53 (expression -> STRING_LITERAL .)
    OR              reduce using rule 53 (expression -> STRING_LITERAL .)
    RPAREN          reduce using rule 53 (expression -> STRING_LITERAL .)
    COMMA           reduce using rule 53 (expression -> STRING_LITERAL .)


state 36

    (54) expression -> TRUE .

    SEMICOLON       reduce using rule 54 (expression -> TRUE .)
    PLUS            reduce using rule 54 (expression -> TRUE .)
    MINUS           reduce using rule 54 (expression -> TRUE .)
    TIMES           reduce using rule 54 (expression -> TRUE .)
    DIVIDE          reduce using rule 54 (expression -> TRUE .)
    EQ              reduce using rule 54 (expression -> TRUE .)
    NEQ             reduce using rule 54 (expression -> TRUE .)
    GT              reduce using rule 54 (expression -> TRUE .)
    LT              reduce using rule 54 (expression -> TRUE .)
    AND             reduce using rule 54 (expression -> TRUE .)
